--- a/ActionTwo/ActionTwo.uproject
+++ b/ActionTwo/ActionTwo.uproject
@@ -17,6 +17,11 @@
 			"TargetAllowList": [
 				"Editor"
 			]
+		},
+		{
+			"Name": "SST",
+			"Enabled": true,
+			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/92a8824c461141ce95f77e454d0c1ba5"
 		}
 	]
 }
