いろいろ追加

--- a/ActionTwo/Config/DefaultEngine.ini
+++ b/ActionTwo/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
+GameDefaultMap=/Game/ExampleMap.ExampleMap
+EditorStartupMap=/Game/ExampleMap.ExampleMap
 GlobalDefaultGameMode="/Script/ActionTwo.ActionTwoGameMode"
 
 [/Script/Engine.RendererSettings]
